source/stylesheets/app/_index.css.scss
article, footer {
  h1, h2, h3, h4, h5, h6 {
    font-family: "Josefin Sans";
    font-weight: 700;
  }
}

article {
  text-shadow: rgba(0, 0, 0, 0.4) 0 1px 1px,
               rgba(0, 0, 0, 0.1) 0 -1px 3px,
               rgba(0, 0, 0, 0.2) 0 0 20px;
}

header {
  padding: 10rem 0;

  h1.logo {
    margin: 0 auto;
    width: 300px;
    height: 300px;
    @include hide-text;
    background: white image-url('minifast.png') center center no-repeat;
    background-size: 300px;
  }
}

footer {
  padding: 10rem 0;
  text-align: center;
}

section {
  color: white;
  padding: 4rem 0;
  background-size: cover;
  background-repeat: none;
  background-position: center center;

  article {
    @include outer-container;
  }

  h1 {
    @include span-columns(12);
    @include omega;
    text-align: center;
    margin-bottom: 5rem;

    @include media($mobile) {
      @include span-columns(4);
      margin-bottom: 1rem;
      padding: 0 2rem;
    }
  }

  p {
    @include span-columns(6);
    text-shadow: rgba(0, 0, 0, 0.5) 0 1px 1px,
                 rgba(0, 0, 0, 0.2) 0 -1px 3px,
                 rgba(0, 0, 0, 0.5) 0 0 20px;
    padding: 0 2rem;
    text-align: right;

    @include media($mobile) {
      @include span-columns(4);
      text-align: left;
    }
  }

  p + p {
    padding-left: 1rem;
    padding-right: 3rem;
    text-align: left;

    @include media($mobile) {
      padding-left: 2rem;
      padding-right: 2rem;
    }
  }
}

.who {
  background-image: image-url('wheat.jpg');
  padding: 10rem 0;

  h1 {
    margin-bottom: 10rem;
    text-align: right;
    padding: 0 5rem;

    @include media($mobile) {
      margin-bottom: 1rem;
      padding: 0 2rem;
      text-align: left;
    }
  }
}

.what {
  background-image: image-url('snow.jpg');
  padding: 15rem 0;
}

.why {
  background-image: image-url('broken.jpg');
  padding: 15rem 0;
}

.how {
  background-image: image-url('mom.jpg');
  padding: 10rem 0;
  background-position: center right;
}

.agile {
  background-image: image-url('field.jpg');
  padding: 15rem 0;
}

